--- a/frontend/src/components/common/Header/Header.module.css
+++ b/frontend/src/components/common/Header/Header.module.css
@@ -30,7 +30,7 @@
 .container {
   max-width: 1400px;
   margin: 0 auto;
-  padding: 8px 12px;
+  /* padding: 8px 12px; */
 }
 
 /* Auth bar */
@@ -84,7 +84,7 @@
 }
 
 .logo {
-  height: 45px;
+  height: 50px;
   width: auto;
   max-width: 200px;
   object-fit: contain;
